--- a/style.css
+++ b/style.css
@@ -1,105 +1,95 @@
 /* Reset de la marge et du padding pour un rendu plus propre */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  /* Styles pour le body */
-  body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start; /* Placer les éléments normalement */
-    align-items: center;
-    height: 100vh;
-    text-align: center;
-    background-color: #f4f4f4;
-    padding: 20px; /* Ajouter un padding général */
-  }
-  
-  /* Styles pour le titre principal (h1) */
-  h1 {
-    font-size: 3em;
-    color: #333;
-    margin-bottom: 20px;
-    text-align: center;
-  }
-  
-  titre {
-    font-size: 5em;
-    color: #333;
-    margin-bottom: 20px;
-    text-align: center;
-  }
-  /* Styles pour les sous-titres (h2) */
-  h2 {
-    font-size: 2em;
-    color: #555;
-    margin-bottom: 15px;
-    text-align: left;
-    width: 70%;
-    margin-left: 15%;
-    margin-right: 15%;
-  }
-  
-  /* Styles pour les paragraphes (p) */
-  p {
-    font-size: 1.2em;
-    color: #666;
-    text-align: left;
-    width: 70%;
-    margin-left: 15%;
-    margin-right: 15%;
-    margin-bottom: 20px;
-  }
-  p2 {
-    display: block;
-    width: 70%; /* Ajustez en fonction de votre mise en page */
-    margin: 0 auto; /* Centrer le bloc */
-    text-align: justify;
-    text-align-last: center; /* Centre la dernière ligne */
-    -webkit-hyphens: none;
-    -moz-hyphens: none;
-    hyphens: none;
-    overflow-wrap: normal;
-    word-break: normal;
-    line-height: 1.5;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  note {
-    font-size: 1 em;
-    color: #837b7b;
-    text-align: center;
-    width: 70%;
-    margin-left: 15%;
-    margin-right: 15%;
-    margin-bottom: 20px;
-  }
+/* Styles pour le body */
+body {
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background-color: #f4f4f4;
+  padding: 20px;
+}
 
-  .joconde {
-    width: 40vw; /* 40% de la largeur de la fenêtre du navigateur */
-    height: auto;
-  }
-  
-  .modulor {
-    width: 35vw; /* 35% de la largeur de la fenêtre du navigateur */
-    height: auto;
-  }
-  
-  
-  /* Styles pour chaque exemple (exemple1, exemple2) */
-  .exemple {
-    width: 100%; /* S'assurer que l'exemple prend toute la largeur disponible */
-    margin-bottom: 30px; /* Un peu d'espace entre chaque exemple */
-    text-align: center;
-  }
+/* Styles pour le titre principal (h1) */
+h1 {
+  font-size: 3em;
+  color: #333;
+  margin-bottom: 20px;
+  text-align: center;
+}
 
-  #exemple12Container {
-    margin: 0 auto;
-    /* Optionnel : définir une largeur maximale pour le puzzle */
-    max-width: 640px;
-    /* Ajustez en fonction de votre mise en page */
-  }
-  
+/* Styles pour les sous-titres (h2) */
+h2 {
+  font-size: 2.2em;
+  color: #555;
+  margin-bottom: 15px;
+  text-align: left;
+  width: 70%;
+  margin-left: 15%;
+  margin-right: 15%;
+}
+h3 {
+  font-size: 1.8em;
+  color: #555;
+  margin-bottom: 15px;
+  text-align: left;
+  width: 70%;
+  margin-left: 15%;
+  margin-right: 15%;
+}
+
+/* Styles pour les paragraphes (p) */
+p {
+  font-size: 1.2em;
+  color: #666;
+  text-align: justify; /* Justifie le texte à gauche et à droite */
+  width: 70%;
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-bottom: 20px;
+}
+
+/* Styles pour les notes */
+note {
+  font-size: 1em;
+  color: #837b7b;
+  text-align: center;
+  width: 70%;
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-bottom: 20px;
+}
+
+/* Styles pour les images */
+.joconde, .modulor {
+  width: 40vw; /* Ajustez selon vos besoins */
+  height: auto;
+}
+
+/* Styles pour chaque exemple (exemple1, exemple2, etc.) */
+.exemple {
+  width: 100%;
+  margin-bottom: 30px;
+  text-align: center;
+  position: relative; /* Ajoutez ceci pour positionner les boutons relativement */
+}
+
+
+/* Styles spécifiques au conteneur du texte interactif */
+#exemple14Container {
+  margin: 0 auto;
+  width: 100%;
+  /* La hauteur sera gérée dynamiquement par p5.js */
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
   
